--- a/css/style.sass
+++ b/css/style.sass
@@ -12,8 +12,8 @@
 
 input[type="submit"]
     -webkit-appearance: none
-    -moz-appearance:    none
-    appearance:         none
+    -moz-appearance: none
+    appearance: none
 
 .wr
     width: 1200px
@@ -168,9 +168,11 @@ section
             align-items: center
             
             img
-                margin-bottom: 10px
-                height: 24px
-            p
+                margin-bottom: 6px
+                height: 27px
+                width: 16px
+
+                p
                 font-size: 12px
                 text-align: center
                 color: #0096ff
@@ -691,4 +693,300 @@ section
                     width: 14px
                     height: 14px
                     
-                    
+.disable
+    position: relative
+    &:after
+        position: absolute
+        left: 50%
+        top: 25%
+        transform: translate(-50%, -50%)
+        content: 'Скоро'
+        font-size: 10px
+        width: 47px
+        height: 16px
+        border-radius: 4px
+        background-color: #282d3a
+        display: -webkit-flex
+        display: -moz-flex
+        display: -ms-flex
+        display: -o-flex
+        display: flex
+        align-items: center
+        justify-content: center
+        color: #fff  
+        font-weight: bold
+
+.section
+    background: #f0f2f5
+    padding-top: 5px
+    .wr
+        display: -webkit-flex
+        display: -moz-flex
+        display: -ms-flex
+        display: -o-flex
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+.breadcrumbs
+    padding-top: 26px
+    padding-bottom: 26px
+    display: -webkit-flex
+    display: -moz-flex
+    display: -ms-flex
+    display: -o-flex
+    display: flex
+    width: 100%
+    li
+        padding-right: 14px
+        margin-right: 11px
+        font-size: 12px
+        color: #979899
+        position: relative
+        &:after
+            background: url(../img/arrow_slide_gr.svg)
+            background-size: contain
+            background-repeat: no-repeat
+            width: 8px
+            height: 8px
+            position: absolute
+            right: 0%
+            top: 50%
+            transform: translateY(-50%) rotate(180deg)
+            content: ''
+            position: absolute
+        &:last-child
+            &:after
+                display: none
+            
+    .active
+        color: #0096ff
+.col_filter
+    width: 282px
+    .filter_head
+        margin-bottom: 23px
+        height: 32px
+        display: -webkit-flex
+        display: -moz-flex
+        display: -ms-flex
+        display: -o-flex
+        display: flex
+        h2
+            font-size: 32px
+            color: #282d3a
+            font-weight: normal
+    .filter_body
+        border-radius: 4px
+        background-color: #ffffff
+        padding: 24px
+        .head
+            font-size: 12px
+            color: #282d3a
+            letter-spacing: 0.3px
+            margin-bottom: 20px
+            text-transform: uppercase
+            font-weight: bold
+    .list
+        width: 100%
+        padding-top: 25px
+        padding-bottom: 25px
+        border-bottom: 1px solid #edeef0      
+        width: 100%
+        &:last-child
+            border-bottom: 0
+            padding-bottom: 0
+        &:first-child
+            padding-top: 0
+        .filter
+            display: -webkit-flex
+            display: -moz-flex
+            display: -ms-flex
+            display: -o-flex
+            display: flex
+            flex-wrap: wrap
+            
+        li
+            width: 50%
+            display: -webkit-flex
+            display: -moz-flex
+            display: -ms-flex
+            display: -o-flex
+            display: flex
+            align-items: flex-start
+            margin-bottom: 20px
+            color: #282d3a
+            font-size: 12px
+            
+        input[type=checkbox]
+            display: none
+        input ~ label 
+            cursor: pointer
+            width: 100%
+            display: -webkit-flex
+            display: -moz-flex
+            display: -ms-flex
+            display: -o-flex
+            display: flex
+        input ~ label > span
+            height: 12px
+            width: 12px
+            text-align: center
+            vertical-align: bottom
+            border: 0.1em solid #282d3a
+            border-radius: 2px
+            position: relative
+            margin-right: 5px
+            top: 1px
+        li.active
+            
+            span
+                background: #282d3a
+                &:before
+                    background: url(../img/galochka.svg)
+                    background-size: contain
+                    background-repeat: no-repeat
+                    width: 8px
+                    height: 8px
+                    position: absolute
+                    left: 50%
+                    top: 50%
+                    transform: translate(-50%, -50%)
+                    content: ''
+                    position: absolute
+        .price-slider
+            margin-bottom: 15px
+            font-size: 16px
+            
+        .price-slider-input 
+            width: 60px
+            height: 34px
+            font-size: 12px
+            -webkit-appearance: none
+            -moz-appearance:    none
+            appearance:         none
+            border-radius: 4px
+            border: solid 1px #e3e4e5
+            padding: 0 10px
+        .filter-price
+            display: -webkit-flex
+            display: -moz-flex
+            display: -ms-flex
+            display: -o-flex
+            display: flex
+            align-items: center
+            p
+                color: #85898c
+                font-size: 12px
+                margin-right: 10px
+                margin-left: 10px
+                &:first-child
+                    margin-left: 0
+.col_cards
+    width: 894px
+    max-width: 100%
+    .cards_head
+        height: 32px
+        display: -webkit-flex
+        display: -moz-flex
+        display: -ms-flex
+        display: -o-flex
+        display: flex
+        align-items: flex-end
+        margin-bottom: 23px
+        h3
+            color: #85898c
+            font-size: 12px
+        ul
+            display: -webkit-flex
+            display: -moz-flex
+            display: -ms-flex
+            display: -o-flex
+            display: flex
+            align-items: center
+        li
+            font-size: 12px
+            color: #282d3a
+        li.active
+            color: #cdced1
+    
+    .card
+        border-radius: 4px
+        box-shadow: 4.9px 4.9px 6px 0 rgba(40, 45, 58, 0.04)
+        background-color: #ffffff
+        display: -webkit-flex
+        display: -moz-flex
+        display: -ms-flex
+        display: -o-flex
+        display: flex
+        justify-content: space-between
+        padding: 25px 17px
+        height: 280px
+        &_imgs
+            width: 220px
+            max-width: 100%
+            .img
+                background-size: contain !important
+                background-position: center !important
+                background-repeat: no-repeat !important
+                width: 100%
+                height: 100%
+        &_info
+            width: 168px
+            h3
+                font-size: 14px
+                color: #282d3a
+                margin-bottom: 10px
+            .available
+                display: none
+                padding-left: 17px
+                color: #282d3a
+                font-size: 12px
+                position: relative
+            .available.active
+                position: relative
+                display: block
+                margin-bottom: 19px
+                &:before
+                    background: url(../img/v_nalichii.svg)
+                    background-size: contain
+                    background-repeat: no-repeat
+                    width: 14px
+                    height: 14px
+                    position: absolute
+                    left: 0%
+                    top: 50%
+                    transform: translateY(-50%)
+                    content: ''
+                    position: absolute
+            .card_info-more
+                margin-bottom: 13px
+                p
+                    font-size: 12px
+                    color: #85898c
+                    margin-bottom: 7px
+                span
+                    color: #282d3a
+                    font-weight: bold
+            .price
+                font-size: 24px
+                color: #282d3a
+                margin-bottom: 26px
+                
+        &_desc
+            width: 367px
+            .card_desc-more
+                margin-bottom: 13px
+                p
+                    font-size: 12px
+                    margin-bottom: 7px
+                    color: #8b8c8c
+                    line-height: 1.5
+                    max-height: 70px
+                    overflow: hidden
+                span
+                    color: #0b0f17
+                a
+                    color: #0096ff
+                    width: 100%
+                    font-size: 12px
+                    border-bottom: 1px dotted #0096ff
+        
