--- a/css/style.sass
+++ b/css/style.sass
@@ -170,12 +170,16 @@ section
             img
                 margin-bottom: 6px
                 height: 27px
-                width: 16px
+               
 
                 p
                 font-size: 12px
                 text-align: center
                 color: #0096ff
+        .plus
+            img
+               
+  
                 
 .banner
     padding-top: 99px
@@ -895,6 +899,7 @@ section
         h3
             color: #85898c
             font-size: 12px
+            margin-right: 10px
         ul
             display: -webkit-flex
             display: -moz-flex
@@ -902,11 +907,27 @@ section
             display: -o-flex
             display: flex
             align-items: center
-        li
-            font-size: 12px
-            color: #282d3a
-        li.active
-            color: #cdced1
+            li
+                font-size: 12px
+                color: #282d3a
+                padding-right: 10px
+                margin-right: 5px
+                position: relative
+                &:after
+                    font-size: 12px
+                    position: absolute
+                    right: 0%
+                    top: 50%
+                    transform: translateY(-50%)
+                    content: '/'
+                    position: absolute
+                &:last-child
+                    &:after
+                        display: none
+                
+            li.active
+                color: #0096ff
+                
     
     .card
         border-radius: 4px
@@ -919,7 +940,6 @@ section
         display: flex
         justify-content: space-between
         padding: 25px 17px
-        height: 280px
         &_imgs
             width: 220px
             max-width: 100%
@@ -951,7 +971,6 @@ section
                     background-repeat: no-repeat
                     width: 14px
                     height: 14px
-                    position: absolute
                     left: 0%
                     top: 50%
                     transform: translateY(-50%)
