--- a/css/style.css
+++ b/css/style.css
@@ -1063,39 +1063,42 @@ section {
     display: -o-flex;
     display: flex;
     justify-content: space-between;
-    padding: 25px 17px; }
-    /* line 943, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+    margin-bottom: 12px; }
+    /* line 944, /Applications/MAMP/htdocs/pontofon/css/style.sass */
     .col_cards .card_imgs {
       width: 220px;
-      max-width: 100%; }
-      /* line 946, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      max-width: 100%;
+      position: relative; }
+      /* line 948, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_imgs .img {
-        background-size: contain !important;
+        background-size: cover !important;
         background-position: center !important;
         background-repeat: no-repeat !important;
         width: 100%;
         height: 100%; }
-    /* line 952, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+    /* line 954, /Applications/MAMP/htdocs/pontofon/css/style.sass */
     .col_cards .card_info {
-      width: 168px; }
-      /* line 954, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      width: 168px;
+      padding: 25px 17px;
+      padding-right: 0; }
+      /* line 958, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_info h3 {
         font-size: 14px;
         color: #282d3a;
         margin-bottom: 10px; }
-      /* line 958, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      /* line 962, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_info .available {
         display: none;
         padding-left: 17px;
         color: #282d3a;
         font-size: 12px;
         position: relative; }
-      /* line 964, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      /* line 968, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_info .available.active {
         position: relative;
         display: block;
         margin-bottom: 19px; }
-        /* line 968, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+        /* line 972, /Applications/MAMP/htdocs/pontofon/css/style.sass */
         .col_cards .card_info .available.active:before {
           background: url(../img/v_nalichii.svg);
           background-size: contain;
@@ -1107,30 +1110,32 @@ section {
           transform: translateY(-50%);
           content: '';
           position: absolute; }
-      /* line 979, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      /* line 983, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_info .card_info-more {
         margin-bottom: 13px; }
-        /* line 981, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+        /* line 985, /Applications/MAMP/htdocs/pontofon/css/style.sass */
         .col_cards .card_info .card_info-more p {
           font-size: 12px;
           color: #85898c;
           margin-bottom: 7px; }
-        /* line 985, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+        /* line 989, /Applications/MAMP/htdocs/pontofon/css/style.sass */
         .col_cards .card_info .card_info-more span {
           color: #282d3a;
           font-weight: bold; }
-      /* line 988, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      /* line 992, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_info .price {
         font-size: 24px;
         color: #282d3a;
         margin-bottom: 26px; }
-    /* line 993, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+    /* line 997, /Applications/MAMP/htdocs/pontofon/css/style.sass */
     .col_cards .card_desc {
-      width: 367px; }
-      /* line 995, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+      width: 367px;
+      padding: 25px 17px;
+      padding-left: 0; }
+      /* line 1001, /Applications/MAMP/htdocs/pontofon/css/style.sass */
       .col_cards .card_desc .card_desc-more {
         margin-bottom: 13px; }
-        /* line 997, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+        /* line 1003, /Applications/MAMP/htdocs/pontofon/css/style.sass */
         .col_cards .card_desc .card_desc-more p {
           font-size: 12px;
           margin-bottom: 7px;
@@ -1138,14 +1143,38 @@ section {
           line-height: 1.5;
           max-height: 70px;
           overflow: hidden; }
-        /* line 1004, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+        /* line 1010, /Applications/MAMP/htdocs/pontofon/css/style.sass */
         .col_cards .card_desc .card_desc-more span {
           color: #0b0f17; }
-        /* line 1006, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+        /* line 1012, /Applications/MAMP/htdocs/pontofon/css/style.sass */
         .col_cards .card_desc .card_desc-more a {
           color: #0096ff;
           width: 100%;
           font-size: 12px;
           border-bottom: 1px dotted #0096ff; }
+
+/* line 1017, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+.new {
+  display: none; }
+
+/* line 1019, /Applications/MAMP/htdocs/pontofon/css/style.sass */
+.new.active {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  font-size: 10px;
+  color: #fff;
+  font-weight: bold;
+  width: 67px;
+  height: 18px;
+  border-radius: 4px;
+  background-color: #282d3a; }
 
 /*# sourceMappingURL=style.css.map */
