--- a/css/style.sass
+++ b/css/style.sass
@@ -374,6 +374,15 @@ section
                     padding-right: 81px
                     height: 193px
                     overflow: scroll
+                    position: relative
+                    &:after
+                        position: absolute
+                        content: ''
+                        bottom: 0
+                        height: 60px
+                        left: 0
+                        background: linear-gradient(to top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.84) 57%, rgba(255,255,255,0.2) 100%)
+                        width: 100%
             &_author
                 display: -webkit-flex
                 display: -moz-flex
@@ -1080,7 +1089,7 @@ section
                 bottom: 0
                 height: 60px
                 left: 0
-                background: linear-gradient(to top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.84) 57%, rgba(255,255,255,0.2) 100%);
+                background: linear-gradient(to top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.84) 57%, rgba(255,255,255,0.2) 100%)
                 width: 100%
             span
                 width: 100%
