--- a/css/style.sass
+++ b/css/style.sass
@@ -1100,7 +1100,7 @@ section
 
     .card_desc-more
         margin-bottom: 13px
-        p
+        .show-p
             font-size: 12px
             margin-bottom: 0px
             color: #8b8c8c
@@ -1123,10 +1123,9 @@ section
                 left: 0
                 background: linear-gradient(to top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.84) 57%, rgba(255,255,255,0.2) 100%);
                 width: 100%
-            span
+            p
                 width: 100%
-        span
-            color: #0b0f17
+                color: #0b0f17
         a
             color: #0096ff
             width: 100%
